<resources>
    <string name="app_name">T3</string>
    <string name="title">Tic Tac Toe</string>
    <string name="serverorclient">Server or Client</string>
    <string name="username">User Name</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="waitingplayer">Waiting for player&#8230;</string>
    <string name="waiting">Waiting&#8230;</string>
    <string name="searchinggame">Searching for game&#8230;</string>
    <string name="empty">--empty--</string>
    <string name="scanfinish">Can not find player, keep searching?</string>
    <string name="advfinish">Can not find game, keep searching?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="notsupport">This device can not work as client</string>
    <string name="periphfound">would like to join your game, do you accept?</string>
    <string name="centalfoundp1">The game </string>
    <string name="centalfoundp2"> was found,. Would you like to connect?</string>
    <string name="btdisabled">Bluetooth is not enabled</string>
    <string name="gattdisconnect">Connection failed</string>
    <string name="readytogame">Ready to game</string>
    <string name="tile0">tile 0</string>
    <string name="tile1">tile 1</string>
    <string name="tile2">tile 2</string>
    <string name="tile3">tile 3</string>
    <string name="tile4">tile 4</string>
    <string name="tile5">tile 5</string>
    <string name="tile6">tile 6</string>
    <string name="tile7">tile 7</string>
    <string name="tile8">tile 8</string>
    <string name="quitconfirm">Do you want to quit the game?</string>
    <string name="chooseplayer">Choose the first player</string>
    <string name="yourTurn">Your Turn</string>
    <string name="win">You Win</string>
    <string name="lose">You Lose</string>
    <string name="draw">Draw!!!</string>
    <string name="startnewgame">Start a new game?</string>

</resources>
