<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.ServerClientActivity"
    android:background="@android:color/holo_blue_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/serverorclient"
        android:id="@+id/textView3"
        android:layout_marginTop="34dp"
        android:textSize="45sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/server"
        android:id="@+id/btnServer"
        android:layout_marginTop="36dp"
        android:background="@drawable/buttonblankblue"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/client"
        android:id="@+id/btnClient"
        android:layout_marginTop="36dp"
        android:background="@drawable/buttonblankblue"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:layout_below="@+id/btnServer"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btnBack"
        android:layout_marginTop="57dp"
        android:src="@drawable/buttonback"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:adjustViewBounds="false"
        tools:ignore ="ContentDescription"
        android:layout_below="@+id/btnClient"
        android:layout_alignStart="@+id/btnClient" />

</RelativeLayout>
